// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignStatus viewerCanAdminister: false campaign errored 1`] = `
<Fragment>
  <div>
    <div
      className="alert alert-danger my-4"
    >
      <h3
        className="alert-heading mb-0"
      >
        Creating changesets failed
      </h3>
      <ul
        className="mt-2"
      >
        <li
          className="mb-2"
          key="0"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="a"
              history="[History]"
            />
          </div>
        </li>
        <li
          className="mb-2"
          key="1"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="b"
              history="[History]"
            />
          </div>
        </li>
      </ul>
      <p
        className="mb-0"
      >
        You don't have permission to view error details.
      </p>
    </div>
  </div>
</Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false campaign processing 1`] = `
<Fragment>
  <div>
    <div
      className="alert alert-info mt-4"
    >
      <LoadingSpinner
        className="icon-inline"
      />
       Creating 
      3
       
      changesets
       on code hosts...
      <div
        className="progress mt-2 mb-1"
      >
        <div
          className="progress-bar"
          style={
            Object {
              "width": "50%",
            }
          }
        >
           
        </div>
      </div>
      <h4
        className="mt-1"
      >
        Creating changesets failed
      </h4>
      <ul
        className="mt-2"
      >
        <li
          className="mb-2"
          key="0"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="a"
              history="[History]"
            />
          </div>
        </li>
        <li
          className="mb-2"
          key="1"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="b"
              history="[History]"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false closed campaign 1`] = `
<Fragment>
  <div>
    <div
      className="alert alert-secondary mt-2"
    >
      Campaign is closed. No changes can be made to this campaign anymore.
    </div>
  </div>
</Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: false drafted campaign 1`] = `<Fragment />`;

exports[`CampaignStatus viewerCanAdminister: false drafted campaign, some published 1`] = `<Fragment />`;

exports[`CampaignStatus viewerCanAdminister: true campaign errored 1`] = `
<Fragment>
  <div>
    <div
      className="alert alert-danger my-4"
    >
      <h3
        className="alert-heading mb-0"
      >
        Creating changesets failed
      </h3>
      <ul
        className="mt-2"
      >
        <li
          className="mb-2"
          key="0"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="a"
              history="[History]"
            />
          </div>
        </li>
        <li
          className="mb-2"
          key="1"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="b"
              history="[History]"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true campaign processing 1`] = `
<Fragment>
  <div>
    <div
      className="alert alert-info mt-4"
    >
      <LoadingSpinner
        className="icon-inline"
      />
       Creating 
      3
       
      changesets
       on code hosts...
      <div
        className="progress mt-2 mb-1"
      >
        <div
          className="progress-bar"
          style={
            Object {
              "width": "50%",
            }
          }
        >
           
        </div>
      </div>
      <h4
        className="mt-1"
      >
        Creating changesets failed
      </h4>
      <ul
        className="mt-2"
      >
        <li
          className="mb-2"
          key="0"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="a"
              history="[History]"
            />
          </div>
        </li>
        <li
          className="mb-2"
          key="1"
        >
          <div
            className="campaign-status__error"
          >
            <ErrorMessage
              error="b"
              history="[History]"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true closed campaign 1`] = `
<Fragment>
  <div>
    <div
      className="alert alert-secondary mt-2"
    >
      Campaign is closed. No changes can be made to this campaign anymore.
    </div>
  </div>
</Fragment>
`;

exports[`CampaignStatus viewerCanAdminister: true drafted campaign 1`] = `<Fragment />`;

exports[`CampaignStatus viewerCanAdminister: true drafted campaign, some published 1`] = `<Fragment />`;
